@@ -125,6 +125,9 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1306615.info \
   ATLAS_2015_I1364361.info \
   ATLAS_2015_I1345452.info \
+  ATLAS_2015_I1351916.info \
+  ATLAS_2015_I1351916_EL.info \
+  ATLAS_2015_I1351916_MU.info \
   ATLAS_2013_I1216670.info \
   ATLAS_2013_I1244522.info \
   ATLAS_2014_I1282447.info \
@@ -140,6 +143,9 @@ dist_pkgdata_DATA = \
   ATLAS_2015_CONF_2015_041_MU.info \
   ATLAS_2015_I1376945.info \
   ATLAS_2015_I1394679.info \
+  ATLAS_2015_I1408516.info \
+  ATLAS_2015_I1408516_EL.info \
+  ATLAS_2015_I1408516_MU.info \
   ATLAS_2016_I1424838.info \
   BABAR_2003_I593379.info \
   BABAR_2005_S6181155.info \
