@@ -131,12 +131,18 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1327229.plot \
   ATLAS_2015_I1387176.plot \
   ATLAS_2015_I1364361.plot \
+  ATLAS_2015_I1351916.plot \
+  ATLAS_2015_I1351916_EL.plot \
+  ATLAS_2015_I1351916_MU.plot \
   ATLAS_2015_I1345452.plot \
   ATLAS_2015_I1376945.plot \
   ATLAS_2015_I1394679.plot \
   ATLAS_2015_CONF_2015_041.plot \
   ATLAS_2015_CONF_2015_041_EL.plot \
   ATLAS_2015_CONF_2015_041_MU.plot \
+  ATLAS_2015_I1408516.plot \
+  ATLAS_2015_I1408516_EL.plot \
+  ATLAS_2015_I1408516_MU.plot \
   ATLAS_2016_I1424838.plot \
   BABAR_2003_I593379.plot \
   BABAR_2005_S6181155.plot \
