@@ -32,8 +32,10 @@ dist_pkgdata_DATA = \
   ATLAS_2011_S9126244.yoda \
   ATLAS_2011_S9128077.yoda \
   ATLAS_2011_S9131140.yoda \
-  ATLAS_2011_I894867.yoda \
   ATLAS_2011_S9035664.yoda \
+  ATLAS_2011_I894867.yoda \
+  ATLAS_2011_I928289_W.yoda \
+  ATLAS_2011_I928289_Z.yoda \
   ATLAS_2011_I919017.yoda \
   ATLAS_2011_I921594.yoda \
   ATLAS_2011_I925932.yoda \
@@ -81,6 +83,14 @@ dist_pkgdata_DATA = \
   ATLAS_2013_I1230812_MU.yoda \
   ATLAS_2013_I1243871.yoda \
   ATLAS_2013_I1263495.yoda \
+  ATLAS_2013_I1216670.yoda \
+  ATLAS_2013_I1244522.yoda \
+  ATLAS_2014_I1282447.yoda \
+  ATLAS_2014_I1298023.yoda \
+  ATLAS_2014_I1319490.yoda \
+  ATLAS_2014_I1319490_EL.yoda \
+  ATLAS_2014_I1319490_MU.yoda \
+  ATLAS_2014_I1326641.yoda \
   ATLAS_2014_I1268975.yoda \
   ATLAS_2014_I1279489.yoda \
   ATLAS_2014_I1282441.yoda \
@@ -100,23 +110,19 @@ dist_pkgdata_DATA = \
   ATLAS_2014_I1312627_MU.yoda \
   ATLAS_2014_I1306615.yoda \
   ATLAS_2015_I1364361.yoda \
+  ATLAS_2015_I1351916.yoda \
+  ATLAS_2015_I1351916_EL.yoda \
+  ATLAS_2015_I1351916_MU.yoda \
   ATLAS_2015_I1345452.yoda \
-  ATLAS_2013_I1216670.yoda \
-  ATLAS_2013_I1244522.yoda \
-  ATLAS_2011_I928289_W.yoda \
-  ATLAS_2011_I928289_Z.yoda \
-  ATLAS_2014_I1282447.yoda \
-  ATLAS_2014_I1298023.yoda \
-  ATLAS_2014_I1319490.yoda \
-  ATLAS_2014_I1319490_EL.yoda \
-  ATLAS_2014_I1319490_MU.yoda \
-  ATLAS_2014_I1326641.yoda \
   ATLAS_2015_I1387176.yoda \
   ATLAS_2015_I1376945.yoda \
   ATLAS_2015_I1394679.yoda \
   ATLAS_2015_CONF_2015_041.yoda \
   ATLAS_2015_CONF_2015_041_EL.yoda \
   ATLAS_2015_CONF_2015_041_MU.yoda \
+  ATLAS_2015_I1408516.yoda \
+  ATLAS_2015_I1408516_EL.yoda \
+  ATLAS_2015_I1408516_MU.yoda \
   ATLAS_2016_I1424838.yoda \
   BABAR_2003_I593379.yoda \
   BABAR_2005_S6181155.yoda \
