@@ -133,10 +133,12 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2014_I1326641.cc \
     ATLAS_2014_I1327229.cc \
     ATLAS_2015_I1345452.cc \
+    ATLAS_2015_I1351916.cc \
     ATLAS_2015_I1364361.cc \
     ATLAS_2015_I1376945.cc \
     ATLAS_2015_I1387176.cc \
     ATLAS_2015_I1394679.cc \
+    ATLAS_2015_I1408516.cc \
     ATLAS_2016_I1424838.cc
 if ENABLE_PRELIMINARY
 RivetATLASAnalyses_la_SOURCES += \
