@@ -1,3 +1,9 @@
+2016-04-13  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Add ATLAS_2015_I1351916 (8 TeV Z FB asymmetry) and
+	ATLAS_2015_I1408516 (8 TeV Z phi* and pT) analyses, and their _EL,
+	_MU variants.
+
 2016-04-12  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Patch PID utils for ordering issues in baryon decoding.
